This PR introduces new flaw comment add API.
Closes OSIDB-81.
